# etheram

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Duplications.md  IMPROVEMENT.md  README.md
embassy-core/: Cargo.toml  README.md
embassy-core/src/: cancellation_token.rs  channel_external_interface_macro.rs  channel_transport_hub.rs  client_facade_macro.rs  client_request_hub.rs  config.rs  embassy_shared_state.rs  heap.rs  lib.rs  network_config.rs  outbox_transport.rs  time_driver.rs  timer_channels.rs
etheram-desktop/: Cargo.toml  README.md  cluster.local.toml
etheram-desktop/scripts/: run_gui.ps1
etheram-desktop/src/: cluster_config.rs  launcher.rs  lib.rs  main.rs
etheram-desktop/src/ui/: cluster_state.rs  gui_app.rs  mod.rs
etheram-desktop/tests/: all_tests.rs  desktop_startup_tests.rs  launcher_tests.rs
etheram-desktop/tests/ui/: cluster_state_tests.rs  mod.rs
etheram-embassy/: Cargo.toml  README.md  build.rs
etheram-embassy/.cargo/: config.toml
etheram-embassy/scripts/: run_channel_in_memory.ps1  run_udp_semihosting.ps1
etheram-embassy/src/: embassy_shared_state.rs  etheram_client.rs  heap.rs  main.rs  semihosting_observer.rs  spawned_node.rs  time_driver.rs
etheram-embassy/src/configurations/: mod.rs
etheram-embassy/src/infra/: mod.rs
etheram-node/: C-Functionalities.md  CHAIN-ROADMAP.md  Cargo.toml  IBFT-ROADMAP.md  RAFT-ROADMAP.md  README.md
etheram-node-process/: Cargo.toml  PARTITION-FAST-TRACK-PLAN.md  README.md  SYNC-IMPLEMENTATION-PLAN.md  build.rs
etheram-node-process/src/: cluster_config.rs  etheram_node.rs  lib.rs  main.rs  node_runtime.rs
etheram-node-process/src/infra/: mod.rs  std_shared_state.rs
etheram-node-process/tests/: all_tests.rs  cluster_config_tests.rs  grpc_transport_tests.rs  in_memory_storage_tests.rs  infra.rs  injected_storage_tests.rs  node_process_external_interface_tests.rs  node_process_restart_tests.rs  node_process_startup_tests.rs  shutdown_tests.rs  std_shared_state_tests.rs  storage_factory_tests.rs  sync_import_tests.rs  sync_plan_mandatory_tests.rs  sync_runtime_flow_tests.rs  sync_sender_tests.rs  sync_state_tests.rs  wire_node_message_tests.rs
etheram-node-process/tests/common/: mod.rs  test_config.rs  test_in_memory_storage.rs
etheram-node-process/tests/infra/: mod.rs  std_shared_state_tests.rs
etheram-node/src/: etheram_node.rs  lib.rs  observer.rs  variants.rs
etheram-node/src/builders/: cache_builder.rs  context_builder_builder.rs  error.rs  etheram_node_builder.rs  execution_engine_builder.rs  external_interface_incoming_builder.rs  external_interface_outgoing_builder.rs  mod.rs  observer_builder.rs  partitioner_builder.rs  protocol_builder.rs  storage_builder.rs  timer_input_builder.rs  timer_output_builder.rs  transport_incoming_builder.rs  transport_outgoing_builder.rs
etheram-node/src/collections/: action_collection.rs  mod.rs
etheram-node/src/common_types/: block.rs  cache_adapter.rs  external_interface_incoming_adapter.rs  external_interface_outgoing_adapter.rs  mod.rs  state_root.rs  transaction.rs  types.rs
etheram-node/src/context/: context_builder.rs  context_dto.rs  mod.rs
etheram-node/src/execution/: block_commitments.rs  execution_engine.rs  mod.rs  receipts_root.rs  transaction_receipt.rs  transaction_result.rs
etheram-node/src/executor/: etheram_executor.rs  mod.rs
etheram-node/src/implementations/: eager_context_builder.rs  in_memory_cache.rs  in_memory_external_interface.rs  in_memory_storage.rs  in_memory_timer.rs  in_memory_transport.rs  mod.rs  no_op_execution_engine.rs  no_op_external_interface.rs  no_op_observer.rs  no_op_protocol.rs  no_op_timer.rs  tiny_evm_engine.rs  tiny_evm_gas.rs  tiny_evm_opcode.rs  type_based_partitioner.rs  value_transfer.rs  value_transfer_engine.rs
etheram-node/src/incoming/: incoming_sources.rs  mod.rs
etheram-node/src/partitioner/: mod.rs  partition.rs
etheram-node/src/state/: etheram_state.rs  mod.rs
etheram-node/tests/: all_tests.rs
etheram-node/tests/builders/: cache_builder_tests.rs  context_builder_builder_tests.rs  etheram_node_builder_tests.rs  external_interface_incoming_builder_tests.rs  external_interface_outgoing_builder_tests.rs  observer_builder_tests.rs  partitioner_builder_tests.rs  protocol_builder_tests.rs  storage_builder_tests.rs  timer_input_builder_tests.rs  timer_output_builder_tests.rs  transport_incoming_builder_tests.rs  transport_outgoing_builder_tests.rs
etheram-node/tests/common_types/: account_tests.rs  block_tests.rs  mod.rs  receipts_root_tests.rs  state_root_tests.rs  transaction_tests.rs
etheram-node/tests/implementations/: eager_context_builder_tests.rs  etheram_executor_tests.rs  etheram_state_tests.rs  in_memory_cache_tests.rs  in_memory_external_interface_tests.rs  in_memory_storage_tests.rs  in_memory_timer_tests.rs  in_memory_transport_tests.rs  mod.rs  no_op_execution_engine_tests.rs  no_op_external_interface_tests.rs  no_op_observer_tests.rs  no_op_protocol_tests.rs  no_op_timer_tests.rs  no_op_transport_tests.rs  standard_shared_state.rs  tiny_evm_engine_tests.rs  tiny_evm_execution_engine_tests.rs  tiny_evm_gas_tests.rs  tiny_evm_opcode_tests.rs  transaction_receipt_storage_tests.rs  type_based_partitioner_tests.rs  (+2 more)
etheram-validation/: Cargo.toml  README.md
etheram-validation/src/: ibft_cluster.rs  ibft_test_node.rs  lib.rs  std_shared_state.rs
etheram-validation/tests/: all_tests.rs  etheram_node_tests.rs  ibft_cluster_basics_tests.rs  ibft_cluster_byzantine_tests.rs  ibft_cluster_client_tests.rs  ibft_cluster_dedup_tests.rs  ibft_cluster_execution_engine_tests.rs  ibft_cluster_gas_price_tests.rs  ibft_cluster_gas_tests.rs  ibft_cluster_malicious_block_tests.rs  ibft_cluster_message_validation_tests.rs  ibft_cluster_persistence_tests.rs  ibft_cluster_reexecution_tests.rs  ibft_cluster_replay_tests.rs  ibft_cluster_round_progression_tests.rs  ibft_cluster_transaction_tests.rs  ibft_cluster_validator_updates_tests.rs  ibft_cluster_view_change_tests.rs
raft-variants/: Cargo.toml
raft-variants/src/: variants.rs
raft-variants/tests/: all_tests.rs
(+682 files in other folders)
