[workspace]
resolver = "2"
members = [
    "core",
    "etheram",
    "etheram-variants",
    "etheram-embassy",
    "etheram-validation",
    "raft-node",
    "raft-variants",
]

[workspace.dependencies]
indexmap = "2.13.0"
rand = "0.10.0"
serde_json = "1.0"
critical-section = "1.2.0"
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
defmt = "1.0.1"
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread"], default-features = false }
embassy-futures = "0.1"
embassy-net = { version = "0.8.0", features = ["proto-ipv4", "tcp", "udp", "medium-ethernet"] }
embassy-net-driver = "0.2.0"
embassy-sync = "0.7.2"
embassy-time = { version = "0.5", features = ["generic-queue-8", "tick-hz-1_000"] }
embassy-time-driver = "0.2.1"
embedded-alloc = "0.7.0"
embedded-io = "0.7.1"
embedded-io-async = "0.7"
heapless = "0.9.2"
panic-semihosting = "0.6"
postcard = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
spin = { version = "0.10.0", default-features = false, features = ["mutex", "spin_mutex"] }
ed25519-dalek = { version = "2", default-features = false }

etheram-core = { path = "core" }
etheram-etheram = { path = "etheram" }
etheram-etheram-variants = { path = "etheram-variants", default-features = false }
etheram-etheram-validation = { path = "etheram-validation" }
raft-raft-node = { path = "raft-node" }
raft-raft-variants = { path = "raft-variants" }
