[package]
name = "etheram-desktop"
version = "0.1.0"
edition = "2021"
autotests = false

[dependencies]
eframe.workspace = true
etheram-core.workspace = true
etheram-node.workspace = true
etheram-node-process.workspace = true
serde.workspace = true
toml.workspace = true

[[test]]
name = "all_tests"
path = "tests/all_tests.rs"
