[package]
name = "etheram-node-process"
version = "0.1.0"
edition = "2021"
autotests = false

[dependencies]
etheram-core.workspace = true
etheram-node.workspace = true
postcard.workspace = true
prost.workspace = true
serde.workspace = true
sled.workspace = true
tokio.workspace = true
tonic.workspace = true
toml.workspace = true

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
proptest.workspace = true

[[test]]
name = "all_tests"
path = "tests/all_tests.rs"
