[package]
name = "etheram-node"
version = "0.1.0"
edition = "2021"
autotests = false

[dependencies]
etheram-core.workspace = true
ed25519-dalek.workspace = true
tiny-keccak.workspace = true

[dev-dependencies]
proptest.workspace = true

[lib]
name = "etheram_node"
path = "src/lib.rs"

[[test]]
name = "all_tests"
path = "tests/all_tests.rs"
