[package]
name = "etheram-etheram-validation"
version = "0.1.0"
edition = "2021"
autotests = false

[dependencies]
etheram-core.workspace = true
etheram-etheram.workspace = true
etheram-etheram-variants.workspace = true

indexmap.workspace = true
rand.workspace = true
serde_json.workspace = true

[dev-dependencies]


[[test]]
name = "all_tests"
path = "tests/all_tests.rs"
